--- a/themes/fluid/layout/_partials/header/banner.ejs
+++ b/themes/fluid/layout/_partials/header/banner.ejs
@@ -10,11 +10,7 @@ var subtitle = page.subtitle || page.title
      style="no-repeat center center; background-size: cover;">
   <div class="full-bg-img">
     <div id="particles-js"></div>
-    <div id='banner-canvas'>
-         <div class="wrapper">
-            <div class="flower"></div>
-        </div>
-    </div>
+    <canvas id="banner-canvas"></canvas>
     <div class="mask flex-center" style="background-color: rgba(0, 0, 0, <%= parseFloat(banner_mask_alpha) %>)">
       <div class="banner-text text-center fade-in-up">
         <div class="h2">
@@ -38,4 +34,5 @@ var subtitle = page.subtitle || page.title
     </div>
   </div>
 </div>
-<script src='/js/banner.js'></script>
+<script src='/js/banner.js' async></script>
+<script src='/js/banner2.js' async></script>
