--- a/themes/fluid/source/css/_pages/_about/about.styl
+++ b/themes/fluid/source/css/_pages/_about/about.styl
@@ -4,6 +4,7 @@
   width 10rem
   height 10rem
   z-index 3
+  filter drop-shadow(3px 3px 7px #092d07) hue-rotate(69deg) brightness(0.7)
 
   img
     width 100%
@@ -18,15 +19,21 @@
     margin-bottom .5rem
 
 .about-name
-  font-size 1.75rem
+  font-size 14rem
   font-weight bold
+  color #677c67
+  text-shadow #092d07 7px 7px 7px
+  filter drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(0.7)
 
 .about-intro
-  font-size 1rem
+  font-size 0.7rem
+  color #55906c
+  text-shadow #092d07 1px 1px 3px
 
 .about-icons
   & > a:not(:last-child)
     margin-right .5rem
 
   & > a > i
-    font-size 1.5rem
+    font-size 1rem
+    color #55906c
