--- a/themes/fluid/source/css/_pages/_base/_widget/header.styl
+++ b/themes/fluid/source/css/_pages/_base/_widget/header.styl
@@ -7,6 +7,7 @@
 
   .navbar-brand
     color var(--navbar-text-color)
+    text-shadow #ffffff 1px 1px 3px
 
   .navbar-toggler .animated-icon span
     background-color var(--navbar-text-color)
