--- a/themes/fluid/source/css/_pages/_base/_widget/banner.styl
+++ b/themes/fluid/source/css/_pages/_base/_widget/banner.styl
@@ -9,6 +9,7 @@
     width 100%
     height 100%
     background-color rgba(0, 0, 0, 0.3)
+    backdrop-filter invert(1)
 
   &[parallax="true"]
     will-change transform
