chore: Update theme

--- a/themes/fluid/source/css/_pages/_base/_widget/banner.styl
+++ b/themes/fluid/source/css/_pages/_base/_widget/banner.styl
@@ -3,13 +3,12 @@
   position relative
   overflow hidden
   cursor default
+  animation filter-huang 28s linear infinite
 
   .mask
     position absolute
     width 100%
     height 100%
-    background-color rgba(0, 0, 0, 0.3)
-    backdrop-filter invert(1)
 
   &[parallax="true"]
     will-change transform
