--- a/themes/fluid/source/css/_mixins/base.styl
+++ b/themes/fluid/source/css/_mixins/base.styl
@@ -21,3 +21,16 @@ ground-glass($px, $bg-color, $alpha)
   @supports not ((-webkit-backdrop-filter: blur($px)) or (backdrop-filter: blur($px)))
     &
       background rgb(convert($bg-color))
+
+@keyframes filter-huang {
+  0% {
+    filter drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg)
+    color green
+  } 50% {
+    filter drop-shadow(3px 3px 7px #092d07) brightness(2.8) opacity(1) invert(1) hue-rotate(360deg)
+    color green
+  } 100% {
+    filter drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg)
+    color green
+  }
+}
