--- a/themes/fluid/source/css/_pages/_about/about.styl
+++ b/themes/fluid/source/css/_pages/_about/about.styl
@@ -4,7 +4,7 @@
   width 10rem
   height 10rem
   z-index 3
-  filter drop-shadow(3px 3px 7px #092d07) hue-rotate(69deg) brightness(0.7)
+  animation filter-huang 24s linear infinite
 
   img
     width 100%
@@ -21,9 +21,10 @@
 .about-name
   font-size 14rem
   font-weight bold
-  color #677c67
+  color #00fa00
   text-shadow #092d07 7px 7px 7px
-  filter drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(0.7)
+  animation filter-huang 24s linear infinite
+
 
 .about-intro
   font-size 0.7rem
