--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,59 @@
+@-moz-keyframes filter-huang {
+  0% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg);
+    color: #008000;
+  }
+  50% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(2.8) opacity(1) invert(1) hue-rotate(360deg);
+    color: #008000;
+  }
+  100% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg);
+    color: #008000;
+  }
+}
+@-webkit-keyframes filter-huang {
+  0% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg);
+    color: #008000;
+  }
+  50% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(2.8) opacity(1) invert(1) hue-rotate(360deg);
+    color: #008000;
+  }
+  100% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg);
+    color: #008000;
+  }
+}
+@-o-keyframes filter-huang {
+  0% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg);
+    color: #008000;
+  }
+  50% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(2.8) opacity(1) invert(1) hue-rotate(360deg);
+    color: #008000;
+  }
+  100% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg);
+    color: #008000;
+  }
+}
+@keyframes filter-huang {
+  0% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg);
+    color: #008000;
+  }
+  50% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(2.8) opacity(1) invert(1) hue-rotate(360deg);
+    color: #008000;
+  }
+  100% {
+    filter: drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(1) invert(1) hue-rotate(0deg);
+    color: #008000;
+  }
+}
 .anchorjs-link {
   text-decoration: none !important;
   transition: opacity 0.2s ease-in-out;
@@ -15,13 +71,12 @@ h6:hover > .anchorjs-link {
   position: relative;
   overflow: hidden;
   cursor: default;
+  animation: filter-huang 28s linear infinite;
 }
 .banner .mask {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0,0.3);
-  backdrop-filter: invert(1);
 }
 .banner[parallax="true"] {
   will-change: transform;
@@ -859,7 +914,7 @@ i.iconfont {
   --line-color: #eaecef;
   --navbar-bg-color: #57c52b;
   --navbar-text-color: #fff;
-  --subtitle-color: #fff;
+  --subtitle-color: #000;
   --scrollbar-color: #c4c6c9;
   --scrollbar-hover-color: #a6a6a6;
   --button-bg-color: transparent;
@@ -884,7 +939,7 @@ i.iconfont {
     --line-color: #435266;
     --navbar-bg-color: #57c52b;
     --navbar-text-color: #d0d0d0;
-    --subtitle-color: #d0d0d0;
+    --subtitle-color: #000;
     --scrollbar-color: #687582;
     --scrollbar-hover-color: #9da8b3;
     --button-bg-color: transparent;
@@ -936,7 +991,7 @@ i.iconfont {
     --line-color: #435266;
     --navbar-bg-color: #57c52b;
     --navbar-text-color: #d0d0d0;
-    --subtitle-color: #d0d0d0;
+    --subtitle-color: #000;
     --scrollbar-color: #687582;
     --scrollbar-hover-color: #9da8b3;
     --button-bg-color: transparent;
@@ -1984,7 +2039,7 @@ input[type=checkbox] {
   width: 10rem;
   height: 10rem;
   z-index: 3;
-  filter: drop-shadow(3px 3px 7px #092d07) hue-rotate(69deg) brightness(0.7);
+  animation: filter-huang 24s linear infinite;
 }
 .about-avatar img {
   width: 100%;
@@ -2000,9 +2055,9 @@ input[type=checkbox] {
 .about-name {
   font-size: 14rem;
   font-weight: bold;
-  color: #677c67;
+  color: #00fa00;
   text-shadow: #092d07 7px 7px 7px;
-  filter: drop-shadow(3px 3px 7px #092d07) brightness(1.4) opacity(0.7);
+  animation: filter-huang 24s linear infinite;
 }
 .about-intro {
   font-size: 0.7rem;
