chore: Update theme

--- a/themes/fluid/source/css/_pages/_about/about.styl
+++ b/themes/fluid/source/css/_pages/_about/about.styl
@@ -5,6 +5,7 @@
   height 10rem
   z-index 3
   animation filter-huang 24s linear infinite
+  opacity 0.7
 
   img
     width 100%
@@ -30,11 +31,15 @@
   font-size 0.7rem
   color #55906c
   text-shadow #092d07 1px 1px 3px
+  animation filter-huang 24s linear infinite
 
 .about-icons
+
   & > a:not(:last-child)
     margin-right .5rem
 
   & > a > i
     font-size 1rem
     color #55906c
+
+  animation filter-huang 24s linear infinite
