--- a/css/main.css
+++ b/css/main.css
@@ -2040,6 +2040,7 @@ input[type=checkbox] {
   height: 10rem;
   z-index: 3;
   animation: filter-huang 24s linear infinite;
+  opacity: 0.7;
 }
 .about-avatar img {
   width: 100%;
@@ -2063,6 +2064,10 @@ input[type=checkbox] {
   font-size: 0.7rem;
   color: #55906c;
   text-shadow: #092d07 1px 1px 3px;
+  animation: filter-huang 24s linear infinite;
+}
+.about-icons {
+  animation: filter-huang 24s linear infinite;
 }
 .about-icons > a:not(:last-child) {
   margin-right: 0.5rem;
