--- a/themes/fluid/source/css/_pages/_about/about.styl
+++ b/themes/fluid/source/css/_pages/_about/about.styl
@@ -22,7 +22,7 @@
 .about-name
   font-size 14rem
   font-weight bold
-  color #00fa00
+  color #b8c6b8
   text-shadow #f25719 7px 7px 7px
   animation filter-huang 28s linear infinite
 
