--- a/themes/fluid/source/css/_mixins/base.styl
+++ b/themes/fluid/source/css/_mixins/base.styl
@@ -24,13 +24,13 @@ ground-glass($px, $bg-color, $alpha)
 
 @keyframes filter-huang {
   0% {
-    filter drop-shadow(3px 3px 7px #f25719) brightness(1) opacity(1) invert(0) hue-rotate(0deg)
-    color #f9882f
+    // filter drop-shadow(3px 3px 7px #f25719) brightness(1) opacity(1) invert(0) hue-rotate(0deg)
+    // color #f9882f
   } 50% {
-    filter drop-shadow(3px 3px 7px #f25719) brightness(1) opacity(1) invert(0) hue-rotate(360deg)
-    color #f9882f
+    // filter drop-shadow(3px 3px 7px #f25719) brightness(1) opacity(1) invert(0) hue-rotate(360deg)
+    // color #f9882f
   } 100% {
-    filter drop-shadow(3px 3px 7px #f25719) brightness(1) opacity(1) invert(0) hue-rotate(0deg)
-    color #f9882f
+    // filter drop-shadow(3px 3px 7px #f25719) brightness(1) opacity(1) invert(0) hue-rotate(0deg)
+    // color #f9882f
   }
 }
