fix: 修复gitee无法播放视频问题

--- a/themes/fluid/layout/_partials/header/banner.ejs
+++ b/themes/fluid/layout/_partials/header/banner.ejs
@@ -18,7 +18,7 @@ var subtitle = page.subtitle || page.title
       src="/img/rain.png"
     >
     <video
-      src="/videos/rain.mp4"
+      src="/videos/rain.avi"
       muted="true"
       autoplay="true"
       auto-rotate="false"
