--- a/themes/fluid/source/css/_pages/_about/about.styl
+++ b/themes/fluid/source/css/_pages/_about/about.styl
@@ -5,7 +5,6 @@
   height 10rem
   z-index 3
   animation filter-huang 28s linear infinite
-  opacity 0.7
 
   img
     width 100%
@@ -22,15 +21,15 @@
 .about-name
   font-size 14rem
   font-weight bold
-  color #b8c6b8
-  text-shadow #f25719 7px 7px 7px
+  color #1cff00
+  text-shadow #1cff00 7px 7px 7px
   animation filter-huang 28s linear infinite
 
 
 .about-intro
   font-size 0.7rem
-  color #55906c
-  text-shadow #f25719 1px 1px 3px
+  color #1cff00
+  text-shadow #1cff00 1px 1px 3px
   animation filter-huang 28s linear infinite
 
 .about-icons
@@ -40,5 +39,5 @@
 
   & > a > i
     font-size 1rem
-    color #55906c
+    color #1cff00
     animation filter-huang 28s linear infinite
