chore: 更新Banner背景图

--- a/themes/fluid/layout/_partials/header/banner.ejs
+++ b/themes/fluid/layout/_partials/header/banner.ejs
@@ -14,7 +14,7 @@ var subtitle = page.subtitle || page.title
     <img
       class="_img_1gdgv_11 _img_1gdgv_11"
       alt=""
-      style="object-fit:fill;"
+      style="object-fit:fill;display: none;"
       src="/img/sky_cloud.png"
     >
     <video
@@ -28,6 +28,7 @@ var subtitle = page.subtitle || page.title
       t7-video-player-type="inline"
       crossorigin="anonymous"
       loop="true"
+      style="display: none;"
     >
     </video>
     <script>
