--- a/themes/fluid/layout/_partials/header/banner.ejs
+++ b/themes/fluid/layout/_partials/header/banner.ejs
@@ -14,11 +14,11 @@ var subtitle = page.subtitle || page.title
     <img
       class="_img_1gdgv_11 _img_1gdgv_11"
       alt=""
-      style="object-fit:fill;display: none;"
-      src="/img/sky_cloud.png"
+      style="object-fit:fill;"
+      src="/img/rain.png"
     >
     <video
-      src="/videos/sky_cloud.avi"
+      src="/videos/rain.avi"
       muted="true"
       autoplay="true"
       auto-rotate="false"
@@ -28,7 +28,6 @@ var subtitle = page.subtitle || page.title
       t7-video-player-type="inline"
       crossorigin="anonymous"
       loop="true"
-      style="display: none;"
     >
     </video>
     <script>
