--- a/themes/fluid/layout/_partials/header/banner.ejs
+++ b/themes/fluid/layout/_partials/header/banner.ejs
@@ -14,8 +14,8 @@ var subtitle = page.subtitle || page.title
     <img
       class="_img_1gdgv_11 _img_1gdgv_11"
       alt=""
-      style="object-fit:fill;"
-      src="/img/rain.png"
+      style="object-fit:cover;"
+      src="/img/白老板.jpg"
     >
     <video
       src="/videos/rain.avi"
@@ -28,6 +28,7 @@ var subtitle = page.subtitle || page.title
       t7-video-player-type="inline"
       crossorigin="anonymous"
       loop="true"
+      style="display:none"
     >
     </video>
     <script>
