--- a/themes/fluid/source/css/_pages/_about/about.styl
+++ b/themes/fluid/source/css/_pages/_about/about.styl
@@ -13,6 +13,7 @@
     background-color transparent
     object-fit cover
     box-shadow 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)
+    filter: hue-rotate(186deg);
 
 .about-info
   & > div
@@ -21,15 +22,15 @@
 .about-name
   font-size 14rem
   font-weight bold
-  color #1cff00
-  text-shadow #1cff00 7px 7px 7px
+  color var(--text-color)
+  text-shadow var(--text-color) 7px 7px 7px
   animation filter-huang 28s linear infinite
 
 
 .about-intro
   font-size 0.7rem
-  color #1cff00
-  text-shadow #1cff00 1px 1px 3px
+  color var(--text-color)
+  text-shadow var(--text-color) 1px 1px 3px
   animation filter-huang 28s linear infinite
 
 .about-icons
@@ -39,5 +40,5 @@
 
   & > a > i
     font-size 1rem
-    color #1cff00
+    color var(--text-color)
     animation filter-huang 28s linear infinite
