--- a/themes/fluid/source/css/_pages/_base/_widget/header.styl
+++ b/themes/fluid/source/css/_pages/_base/_widget/header.styl
@@ -9,6 +9,13 @@
     color var(--navbar-text-color)
     text-shadow #ffffff 1px 1px 3px
 
+    & img
+      width: 55px
+      height: 55px
+      border-radius: 50%;
+      background-color: transparent;
+      object-fit: cover;
+
   .navbar-toggler .animated-icon span
     background-color var(--navbar-text-color)
 
