chore: 子目录部署

--- a/themes/fluid/layout/_partials/header/navigation.ejs
+++ b/themes/fluid/layout/_partials/header/navigation.ejs
@@ -1,7 +1,7 @@
 <nav id="navbar" class="navbar fixed-top  navbar-expand-lg navbar-dark scrolling-navbar">
   <div class="container">
     <a class="navbar-brand" href="<%= url_for() %>">
-      <img src="<%= theme.about.avatar %>" />
+      <img src="<%= url_for(theme.about.avatar) %>" />
     </a>
 
     <button id="navbar-toggler-btn" class="navbar-toggler" type="button" data-toggle="collapse"
