--- a/themes/fluid/source/css/_pages/_base/_widget/banner.styl
+++ b/themes/fluid/source/css/_pages/_base/_widget/banner.styl
@@ -8,7 +8,8 @@
   .mask
     position absolute
     width 100%
-    height 100%
+    height 100
+    backdrop-filter brightness(0.6)
 
   &[parallax="true"]
     will-change transform
